--- a/coderman/macos/Runner/Configs/AppInfo.xcconfig
+++ b/coderman/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = coderman
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.coderman
+PRODUCT_BUNDLE_IDENTIFIER = com.coderman.coderman
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2025 com.coderman. All rights reserved.
