--- a/coderman/pubspec.yaml
+++ b/coderman/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   flutter_svg: ^2.2.3
   provider: ^6.1.5+1
+  shared_preferences: ^2.5.4
+  flutter_code_editor: ^0.3.5
+  path_provider: ^2.1.5
+  ffi: ^2.1.4
 
 dev_dependencies:
   flutter_test:
